--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -252,8 +252,9 @@
                            autoplay
                            muted
                            loop
+                           playsinline
                            class="w-full h-auto"
-                           preload="metadata">
+                           preload="auto">
                         Your browser does not support the video tag.
                     </video>
                     <!-- Image for other tabs -->
